# mandelwow

./: .editorconfig  .gitmodules  Cargo.toml  README.md  bounding_box.rs  cube.rs  debug.sh  debug_asmjs.sh  debug_wasm.sh  gentextures.sh  index.html  lib.rs  main.rs  mandel.rs  mandelwow.frag  mandelwow.rs  mandelwow.vert  release.sh  release_asmjs.sh  release_wasm.sh  screenshot.rs  shaded.frag  shaded.vert  shaded_cube.rs  solid.frag  solid.vert  sound.rs  sound_emscripten.rs  text.rs  timer.rs
benches/: bounding_box.rs  shaded_cube.rs
shaders/: mandelwow.frag  mandelwow.vert  shaded.vert  text.frag  text.vert
support/: camera.rs  mod.rs  vec3.rs
textures/: c64-font.gray
