[package]
name = "mandelwow"
version = "0.7.0"
authors = ["Bernie Innocenti <bernie@codewiz.org>"]
license = "GPL-3.0+"

[profile.release]
lto = true
panic = "abort"
opt-level = 3

[dependencies]
cgmath = "*"
glium = "0.16.0"
glutin = "0.7.4"
genmesh = "0.4.1"
image = { version = "0.14.0", features = ["png_codec"], optional = true }
libxm = "1.0.0"
obj = { version = "0.5", features = ["usegenmesh"] }
rust-rocket = { path = "rust-rocket", optional = true }
rand = "*"
sdl2 = "*"

[features]
default = ["image", "editor", "logging"]
min = []
logging = []
editor = ["rust-rocket"]

[replace]
"glutin:0.7.4" = { path = "/home/bernie/src/glutin" }
"glium:0.16.0" = { path = "/home/bernie/src/glium" }

[target.armv7-linux-androideabi]
ar = "$ANDROID_NDK_HOME/arm/bin/arm-linux-androideabi-ar"
linker = "$ANDROID_NDK_HOME/arm/bin/arm-linux-androideabi-clang"

[lib]
name = "mandelwow_lib"
path = "lib.rs"

[[bin]]
name = "mandelwow"
path = "main.rs"
